--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Sam Gryzick",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -20,6 +21,7 @@
     "express": "^4.17.3",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.18",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.0",
